# synthetic-data-kit

./: .gitignore  GENERATE_FEATURE.md  debug_seed_curation.py  pyproject.toml  test_fixes.py  test_seed_curation.py  test_unicode_fix.py
configs/: config.yaml
examples/: ocr_seed_examples.json  ocr_taxonomy.md
synthetic_data_kit/: cli.py  config.yaml
synthetic_data_kit/core/: curate.py  generate.py
synthetic_data_kit/generators/: __init__.py  synthetic_data_generator.py
synthetic_data_kit/utils/: config.py
