[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-kit"
version = "0.1.0"
description = "A comprehensive toolkit for generating, curating, and managing synthetic data using LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Synthetic Data Kit Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.9.0",
    "python-pptx>=0.6.21",
    "PyPDF2>=3.0.0",
    "yt-dlp>=2023.1.6",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/Dhanush-M555/synthetic-data-kit"
Repository = "https://github.com/Dhanush-M555/synthetic-data-kit.git"
Issues = "https://github.com/Dhanush-M555/synthetic-data-kit/issues"

[project.scripts]
synthetic-data-kit = "synthetic_data_kit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthetic_data_kit*"]

[tool.setuptools.package-data]
synthetic_data_kit = ["*.yaml", "config.yaml"]
"*" = ["*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
